[gd_scene load_steps=2 format=2]

[ext_resource path="res://Src/Scripts/Menu.gd" type="Script" id=1]

[node name="Node2D" type="Control"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
margin_right = 1024.0
margin_bottom = 576.0
rect_min_size = Vector2( 1024, 576 )
size_flags_stretch_ratio = 0.0
color = Color( 0.34902, 0.0901961, 0.0901961, 1 )

[node name="Label" type="Label" parent="CenterContainer/ColorRect"]
margin_left = 456.0
margin_top = 161.0
margin_right = 555.0
margin_bottom = 175.0
text = "GROCERY DASH"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/ColorRect"]
margin_left = 345.0
margin_top = 281.0
margin_right = 663.0
margin_bottom = 419.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 37

[node name="play" type="Button" parent="CenterContainer/ColorRect/VBoxContainer"]
margin_right = 318.0
margin_bottom = 20.0
text = "Play"

[node name="instructions" type="Button" parent="CenterContainer/ColorRect/VBoxContainer"]
margin_top = 57.0
margin_right = 318.0
margin_bottom = 77.0
text = "How to play"

[node name="quit" type="Button" parent="CenterContainer/ColorRect/VBoxContainer"]
margin_top = 114.0
margin_right = 318.0
margin_bottom = 134.0
text = "Quit"

[connection signal="pressed" from="CenterContainer/ColorRect/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/ColorRect/VBoxContainer/instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="CenterContainer/ColorRect/VBoxContainer/quit" to="." method="_on_quit_pressed"]
