[gd_scene load_steps=2 format=2]

[ext_resource path="res://Src/Scripts/Menu.gd" type="Script" id=1]

[node name="Node2D" type="Control"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1022.0
margin_bottom = 577.0
color = Color( 0.34902, 0.0901961, 0.0901961, 1 )

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 458.0
margin_top = 166.0
margin_right = 557.0
margin_bottom = 180.0
text = "You win!"
align = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
margin_left = 347.0
margin_top = 286.0
margin_right = 665.0
margin_bottom = 424.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 37

[node name="play" type="Button" parent="ColorRect/VBoxContainer"]
margin_right = 318.0
margin_bottom = 20.0
text = "Play Again"

[node name="backtomenu" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 57.0
margin_right = 318.0
margin_bottom = 77.0
text = "Back To Menu"

[node name="quit" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 114.0
margin_right = 318.0
margin_bottom = 134.0
text = "Quit"

[connection signal="pressed" from="ColorRect/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/backtomenu" to="." method="_on_backtomenu_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/quit" to="." method="_on_quit_pressed"]
